<resources>
    <string name="app_name">Text-encrypt</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_enter_password">Enter password</string>
    <string name="password_dialog_cancel">Cancel</string>
    <string name="password_dialog_confirm">Ok</string>
    <string name="password_dialog_message">In order to decrypt or encrypt a message, you must provide a password</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_password_do_not_match">Passwords do not match</string>
    <string name="message_is_empty">Message is empty</string>
    <string name="btn_process">Process</string>
    <string name="note_saved">Note saved</string>
    <string name="note_attachments_count">%d</string>
    <string name="action_decrypt">Decrypt</string>
    <string name="action_encrypt">Encrypt</string>
    <string name="action_save">Save</string>
    <string name="wrong_password">Wrong password</string>
    <string name="use_initial_password">Use previous password</string>
    <string name="description_field_helper">Description</string>
    <string name="optional_field">Optional</string>
    <string name="menu_note_export">Export</string>
    <string name="menu_note_delete">Delete</string>
    <string name="menu_note_copy">Copy</string>
    <string name="message_note_text_copied">Note text has been copied</string>
    <string name="import_content_hint">Paste the encrypted content here</string>
    <string name="discard_imported_note">Discard</string>
    <string name="save_imported_note">Save</string>
    <string name="decrypt_note">Decrypt</string>
    <string name="message_malformed">Encrypted message is malformed</string>
    <string name="title_notes_list">Notes</string>
    <string name="title_compose_note">Compose</string>
    <string name="title_import">Import</string>
    <string name="title_import_message">Import message</string>
    <string name="note_exported">Exported to \"%s\"</string>
    <string name="enter_message">Enter message</string>
    <string name="action_share">Share</string>
    <string name="share_note_dialog_title">Sharing a note</string>
    <string name="corrupted_file_ok_button">OK</string>
    <string name="corrupted_file_dialog_message">Invalid or corrupted file. Please ensure you are using the correct file type and try again.</string>
    <string name="corrupted_file_dialog_title">Note import</string>
    <string name="attachment_saved">Attachment \'%s\' saved</string>
    <string name="action_open_attachment">Open</string>
    <string name="dialog_title_open_with">Open with</string>
    <string name="note_copied_label">Encrypted note with description: \"%s\"</string>
</resources>